testdata/ttcn3-conformance-tests/ATS/core_language/B_matching_incoming_values/B01_template_matching/B0105_matching_character_pattern/B010505_pattern_compatibility/NegSyn_B010505_pattern_compatibility_001.ttcn
/***************************************************
 ** @author   STF 487
 ** @version  0.0.1
 ** @purpose  1:B.1.5.0, Ensure that the IUT correctly handles character pattern metacharacters
 compatibility rules of template matching
 ** @verdict  pass reject
 ***************************************************/

module NegSyn_B010505_pattern_compatibility_001 {

    type component GeneralComp {}

testcase TC_NegSyn_B010505_pattern_compatibility_001() runs on GeneralComp {

     template charstring mw_matchingTemplate:= pattern "??riable reference";
     var charstring mw_matchingTemplate_2:= pattern mw_matchingTemplate;    // error: Cannot assign a template to a non-template variable.

}
control{
    execute(TC_NegSyn_B010505_pattern_compatibility_001());
}

}
